# mypkg

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: test.yml
launch/: prime.launch.py  prime_checker.launch.py  prime_generator.launch.py  talk_listen.launch.py
log/: latest_test
mypkg/: listener.py  prime.py  prime_checker.py  prime_generator.py  talker.py
test/: test.bash  test_copyright.py
