<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mypkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s23c1055ky@s.chibaoudai.jp">d23c1055</maintainer>
  <license>BSD-3-Clause</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_copyright</exec_depend>
  <exec_depend>ament_flake8</exec_depend>
  <exec_depend>ament_pep257</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
